--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -71,7 +71,7 @@ a.nav-link {
   justify-content: center;
   color: var(--text-secondary);
   font-weight: var(--font-weight-medium);
-  padding: var(--spacing-sm) 0;
+  padding: var(--spacing-md) 0;
   text-align: center;
   text-decoration: none;
   font-size: var(--font-size-xs);
